0.18.0 (UNRELEASED)
===================

Features Added:

  * Project content export is now linked from the top nav, and
    includes: wiki pages, mailing list archive as an mbox file,
    mailing list subscribers as a csv, blog pages as a WXR file.
    
    Export is done asynchronously with an ajax UI in case it takes a
    long time. (slinkp)

  * Member deletion now works, and has a link from the account page.
    (slinkp)

  * Added 'sortable_title' index (w/ associated ISortableTitle indexing
    adapter) to portal_catalog. (rafrombrc)

  * Added IMemberRegisteredEvent and IPortraitModifiedEvent events, firing
    them at the appropriate places. (rafrombrc)

  * Added 'opencore.analytics' viewlet to allow easy inclusion of an
    analytics snippet in the IExtraBody viewlet manager. (rafrombrc)

  * Added support for optional 'include_time' argument to the pretty_date
    functions. (rafrombrc)

  * Wrapped status message div in a span tag with an id of
    'oc-statusMessage-container' to allow easy JS access to the entire
    status message portion of the DOM. (rafrombrc)

  * Email sender now includes the full name of the sender in the 'From:'
    header if we pass in a member id as the sender token. (rafrombrc)

  * Added IListenContainer interface to mark mailing list containers.
    (rafrombrc)

  * Added 'num_lists' method to the listen view to easily figure out how
    many mailing lists exist in a given project. (rafrombrc)

  * Added 'mail event' support to listen mailing lists, which allows
    customized reply messages to be generated and sent to users based
    on the specific error code a sent message generates.
    (rafrombrc, rmarianski)

  * Moved the viewlet 'save' processing to _before_ the main form save
    processing during the project edit handling so the viewlet save can
    scribble on the request form to impact the primary save. (rafrombrc)

  * Switched from 'profile_edit_sidebar' to 'profile_sidebar' for the