@@ -14,12 +14,18 @@ An exported zip file will contain the following subfolders:
     This folder contains two kinds of file for each exported mailing
     list:
 
-       one .mbox file which contains the entire mailing list archive
+       One .mbox file which contains the entire mailing list archive
        in standard mbox format;
 
-       one subscribers.csv file which contains all subscribers to the
-       mailing list in a comma-separated format. Each line contains a
-       subscriber's login id, full name if provided, and email address.
+       One subscribers.csv file which contains all subscribers to the
+       mailing list in a comma-separated format. Each line contains
+       the following 4 pieces of information:
+
+           subscriber's login id if any,
+           full name if provided,
+           email address,
+           and subscriber status (either "subscribed", or "allowed"
+             which means this address can mail to the list but isn't subscribed.
 
   
   blog/
