@@ -5,7 +5,8 @@ Features Added:
 
   * Project content export is now linked from the top nav, and
     includes: wiki pages, mailing list archive as an mbox file,
-    mailing list subscribers as a csv, blog pages as a WXR file.
+    mailing list subscribers and allowed senders as a csv file, and
+    blog pages as a WXR file.
     
     Export is done asynchronously with an ajax UI in case it takes a
     long time. (slinkp)
